--- a/web/src/main/resources/messages.properties
+++ b/web/src/main/resources/messages.properties
@@ -22,7 +22,7 @@ label.user.status.pending=Pending
 label.user.status.active=Active
 label.user.status.disabled=Disabled
 
-label.login.info=Please sign in
+label.login.info=ign in
 label.user.status=Status
 label.user.profile=Profile
 label.first.name=Name
